apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__router_bridge_query_planner__tests__impl-2.snap
---
source: apollo-router-core/src/query_planner/router_bridge_query_planner.rs
assertion_line: 96
expression: result

---
QueryPlan {
    root: Fetch(
        FetchNode {
            service_name: "accounts",
            requires: [],
            variable_usages: [],
            operation: "{me{name{first last}}}",
        },
    ),
}
