apollo-router-core/src/query_planner/snapshots/apollo_router_core__query_planner__router_bridge_query_planner__tests__plan.snap
---
source: apollo-router-core/src/query_planner/router_bridge_query_planner.rs
expression: result

---
QueryPlan {
    node: Some(
        Fetch(
            FetchNode {
                service_name: "accounts",
                requires: None,
                variable_usages: [],
                operation: "{me{name{first last}}}",
            },
        ),
    ),
}
